# tsp

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  deny.toml  docker-compose.yaml  wallet.sqlite
demo/: .eslintrc.cjs  .gitignore  Cargo.toml  index.html  package.json
demo/src/: App.tsx  Chat.tsx  ChatInput.tsx  ChatMessage.tsx  Contacts.tsx  EncodedMessage.tsx  Initialize.tsx  Profile.tsx  ScanContact.tsx  lib.rs  main.tsx  overrides.css  useStore.ts  util.ts
examples/: Cargo.toml  DEPLOY.md  cli-demo-direct.sh  cli-demo-doubly-nested.sh  cli-demo-nested.sh  cli-demo-routed-cli-only.sh  cli-demo-routed-external-p.sh  cli-demo-routed-external.sh  cli-demo-routed-local-p.sh  cli-demo-routed-local.sh  cli-demo-routed.sh  cli-test-cross-type.sh  cli-test-direct.sh  cli-test-nested.sh  cli-test-relations.sh  cli-test-routed-2.sh  cli-test-routed.sh  did-web.html  index.html  intermediary.html  script.js  test_wallet_nzSvlrqn.sqlite  test_wallet_nzSvlrqn.sqlite-shm  test_wallet_nzSvlrqn.sqlite-wal  test_wallet_rXGkevqU.sqlite
examples/src/: bench.rs  builtin_profiles.rs  cli.rs  create-did-web.rs  did-server.rs  did-web.rs  intermediary.rs  server.rs  smart_home_lock.rs
examples/test/: a-did.json  a.json  alice-did.json  alice.json  b-did.json  b.json  bob-did.json  bob.json  localhost-key.pem  localhost.pem  p-config.json  p-did.json  p.json  q-config.json  q-did.json  q.json  root-ca.pem  ssl-proxy.json  timestamp-server-did.json  timestamp-server.json
examples/test/a/: did.json  piv.json
examples/test/alice/: did.json  piv.json
examples/test/b/: did.json  piv.json
examples/test/bob/: did.json  piv.json
examples/test/c/: did.json  did.jsonl  keys.sqlite
examples/test/foo/: did.json  did.jsonl
examples/test/quic-alice/: piv.json
examples/test/quic-bob/: piv.json
examples/test/timestamp-server/: did.json  piv.json
examples/test/tls-alice/: piv.json
examples/test/tls-bob/: piv.json
examples/tests/: cli_tests.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: crypto_seal_open.rs  payload_decode_garbage.rs  payload_encode_decode.rs
tsp/: Cargo.toml  test.sqlite
tsp-javascript/: Cargo.toml
tsp-javascript/src/: lib.rs
tsp-python/: Cargo.toml  README.md  example.py  pyproject.toml  test.py  test_make_relationship_request.py  test_open_seal.py  tsp.py
tsp-python/src/: lib.rs
tsp/src/: async_store.rs  error.rs  lib.rs  owned_slice.rs  store.rs  test.rs  vault.rs
tsp/src/cesr/: decode.rs  detect.rs  encode.rs  error.rs  mod.rs  packet.rs
tsp/src/cesr/packet/: from_mut.rs  fuzzing.rs
tsp/src/crypto/: digest.rs  error.rs  mod.rs  nonconfidential.rs  tsp_hpke.rs  tsp_nacl.rs
tsp/src/definitions/: conversions.rs  mod.rs
tsp/src/transport/: error.rs  http.rs  mod.rs  quic.rs  tcp.rs  tls.rs
tsp/src/vid/: deserialize.rs  mod.rs  resolve.rs
tsp/src/vid/did/: mod.rs  peer.rs  tdw.rs  web.rs
tsp_javascript/: Cargo.toml
tsp_javascript/src/: lib.rs
tsp_python/: Cargo.toml  README.md  example.py  pyproject.toml  test.py  tsp.py
tsp_python/src/: lib.rs
tsp_python/tsp_python/: __init__.py  tsp.py  tsp_python.pyi
tsp_sdk/: Cargo.toml  Justfile  Makefile.toml  pyproject.toml
tsp_sdk/benches/: bench_utils.rs  guardrail.rs  guardrail_hpke.rs  guardrail_pq.rs  guardrail_report.rs  throughput.rs  throughput_cli.rs  throughput_hpke.rs  throughput_pq.rs  throughput_report.rs  throughput_store_backend.rs  throughput_store_backend_pg.rs  throughput_transport.rs
tsp_sdk/benches/common/: bench.rs  criterion.rs  failure.rs  report.rs  sqlite.rs  tokio_rt.rs
tsp_sdk/benches/guardrail/: Dockerfile  run_docker.sh
tsp_sdk/src/: async_store.rs  error.rs  http_client.rs  lib.rs  parallel_relationship_test.rs  queue.rs  relationship_machine.rs  retry.rs  secure_storage.rs  store.rs  test.rs  test_utils.rs  test_vectors.rs
tsp_sdk/src/cesr/: consts.rs  decode.rs  encode.rs  error.rs  mod.rs  packet.rs
tsp_sdk/src/cesr/packet/: fuzzing.rs
tsp_sdk/src/crypto/: digest.rs  error.rs  mod.rs  nonconfidential.rs  tsp_hpke.rs  tsp_nacl.rs
tsp_sdk/src/definitions/: conversions.rs  mod.rs
tsp_sdk/src/transport/: error.rs  http.rs  mod.rs  quic.rs  tcp.rs  tls.rs
tsp_sdk/src/vid/: deserialize.rs  error.rs  mod.rs  resolve.rs
tsp_sdk/src/vid/did/: mod.rs  peer.rs  scid.rs  tsp_provision_webvh.py  web.rs  webvh.rs
tsp_sdk/tests/: test_vectors.rs
tsp_sdk/tests/fixtures/wallets/: current-dirty-small.sqlite
tsp_sdk/tests/test_vectors/: README.md  smoke.rs
tsp_test_vectors/: Cargo.toml  README.md
tsp_test_vectors/assets/: README.md
tsp_test_vectors/assets/artifact-set.cc-001/: case-manifest.yaml
tsp_test_vectors/assets/artifact-set.cc-001/fixtures/: fixture.conversation.direct.accept-01.yaml  fixture.conversation.direct.message-01.yaml  fixture.conversation.direct.request-01.yaml  fixture.conversation.direct.rfd-01.yaml  fixture.conversation.negative.digest-mismatch-01.yaml  fixture.conversation.negative.nested-without-outer-01.yaml  fixture.conversation.negative.no-prior-relationship-01.yaml  fixture.conversation.nested.accept-01.yaml  fixture.conversation.nested.message-01.yaml  (+12 more)
tsp_test_vectors/assets/artifact-set.cc-002/: case-manifest.yaml
tsp_test_vectors/assets/artifact-set.cc-003/: case-manifest.yaml
tsp_test_vectors/assets/review-set.cc-001/: README.md
tsp_test_vectors/assets/review-set.cc-002/: README.md
tsp_test_vectors/assets/review-set.cc-003/: README.md
tsp_test_vectors/docs/: README.md
tsp_test_vectors/docs/spec/: test-vector-blockers.md  test-vector-case-manifests.md  test-vector-case-output-schema.md  test-vector-case-outputs.md  test-vector-complete-cases.md  test-vector-fixture-inventory.md  test-vector-fixtures.md  test-vector-instances.md  test-vector-schema.md  test-vector-spec-mapping.md  test-vectors-overview.md  test-vectors-proposal.md
tsp_test_vectors/src/: case_runner.rs  layout.rs  lib.rs  validator.rs
tsp_test_vectors/src/authoring/: candidate.rs  check.rs  freeze.rs  generate.rs  mod.rs  package.rs  source.rs  writer.rs
tsp_test_vectors/tests/: generate_report.rs
(+355 files in other folders)
