[workspace]
resolver = "2"
members = ["tsp_sdk", "examples", "fuzz", "tsp_python", "tsp_javascript"]
exclude = ["demo"]

[workspace.package]
version = "0.9.0-alpha2"
edition = "2024"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/openwallet-foundation-labs/tsp"
homepage = "https://github.com/openwallet-foundation-labs/tsp"
readme = "./README.md"
description = "Rust implementation of the Trust Spanning Protocol"
publish = false
rust-version = "1.88"

[workspace.dependencies]
# generic
base64ct = { version = "1.8", default-features = false, features = [
  "alloc",
  "std",
] }
thiserror = "2.0.16"
url = { version = "2.5", features = ["serde"] }
zeroize = "1.8"
once_cell = "1.21"
#crypto
ed25519-dalek = { version = "2.2", default-features = false, features = [
  "fast",
  "std",
  "zeroize",
  "rand_core",
] }
hpke = { version = "0.12.0", features = ["std"] }
hpke_pq = { version = "0.11.1", features = ["alloc", "std", "xyber768d00"] }
ml-dsa = { version = "0.0.4", features = ["rand_core"] }
rand = { version = "0.8" }
rand_core = "0.6.4"
sha2 = "0.11.0-pre.5"
blake2 = "0.11.0-pre.5"
typenum = "1.18.0"
crypto_box = { version = "0.9.1", features = ["std", "chacha20"] }
# async
async-stream = { version = "0.3" }
futures = { version = "0.3" }
tokio = { version = "1.0", default-features = false, features = [
  "rt-multi-thread",
  "net",
  "macros",
  "signal",
] }
aries-askar = { version = "0.4.6", default-features = false, features = [
  "sqlite",
] }
# logging
tracing = "0.1"
tracing-subscriber = { version = "0.3.1", default-features = false, features = [
  "fmt",
  "ansi",
  "env-filter",
  "tracing-log",
] }
# transport
tokio-tungstenite = { version = "0.28", default-features = false, features = [
  "rustls-tls-native-roots",
  "stream",
  "connect",
] }
tokio-util = { version = "0.7", default-features = false, features = ["codec"] }
bytes = "1.10.1"
rustls = "0.23"
tokio-rustls = "0.26"
rustls-pki-types = "1.12"
rustls-native-certs = "0.8.1"
quinn = { version = "0.11", default-features = false, features = [
  "log",
  "runtime-tokio",
  "rustls-aws-lc-rs",
] }
# resolve
reqwest = { version = "0.12.12", default-features = false, features = [
  "rustls-tls-native-roots",
  "json",
  "stream",
  "charset",
  "http2",
  "macos-system-configuration",
] }
#
# webvh
didwebvh-rs = "=0.1.10"

# Python bindings
pyo3 = { version = "0.26", features = ["serde"] }
pythonize = "0.26"

# serialize
serde = { version = "1.0.220", features = ["derive"] }
serde_json = { version = "1.0" }
serde_with = { version = "3.14", features = ["base64"] }
bs58 = "0.5"
# fuzzing
arbitrary = { version = "1.0", features = ["derive"] }
# cli
clap = { version = "4.5", features = ["derive"] }
# demo server
axum = { version = "0.8.1", features = ["ws", "macros"] }
tower-http = { version = "0.6.2", features = ["cors"] }

tsp_sdk = { path = "./tsp_sdk", version = "0.9.0-alpha" }
