[package]
name = "tsp-demo"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0 OR MIT"
publish = false
rust-version = "1.77"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2"
console_error_panic_hook = { version = "0.1", optional = true }
tsp-javascript = { path = "../tsp_javascript" }

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
opt-level = "s"
