[package]
name = "examples"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
publish.workspace = true
rust-version.workspace = true

[features]
nacl = ["tsp_sdk/nacl"]
use_local_certificate = ["tsp_sdk/use_local_certificate"]
create-webvh = ["tsp_sdk/create-webvh", "dep:pyo3", "dep:pyo3-async-runtimes"]

[[bin]]
name = "create-did-web"
path = "src/create-did-web.rs"

[[bin]]
name = "tsp"
path = "src/cli.rs"

[[bin]]
name = "demo-server"
path = "src/server.rs"

[[bin]]
name = "demo-intermediary"
path = "src/intermediary.rs"

[[bin]]
name = "did-server"
path = "src/did-server.rs"

[dependencies]
tsp_sdk = { path = "../tsp_sdk", features = ["async", "resolve"] }
axum = { workspace = true }
base64ct = { workspace = true }
clap = { workspace = true }
reqwest = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
bytes = { workspace = true }
url = { workspace = true }
rustls = { workspace = true }
tower-http = { workspace = true }
uuid = "1.17.0"

# create webvh
pyo3 = { workspace = true, optional = true }
pyo3-async-runtimes = { workspace = true, optional = true }

[dev-dependencies]
assert_cmd = "2.0.17"
rand = "0.8"
predicates = "3.1.3"
serial_test = "3.2.0"
