[package]
name = "examples"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
publish.workspace = true
rust-version.workspace = true

[features]
default = ["nacl"]
nacl = ["tsp_sdk/nacl"]
essr = ["tsp_sdk/essr"]
use_local_certificate = ["tsp_sdk/use_local_certificate"]
pq = ["tsp_sdk/pq"]

[[bin]]
name = "create-did-web"
path = "src/create-did-web.rs"

[[bin]]
name = "tsp"
path = "src/cli.rs"

[[bin]]
name = "demo-server"
path = "src/server.rs"

[[bin]]
name = "demo-intermediary"
path = "src/intermediary.rs"

[[bin]]
name = "did-server"
path = "src/did-server.rs"

[dependencies]
tsp_sdk = { path = "../tsp_sdk", default-features = false, features = ["async", "resolve"] }
axum = { workspace = true }
base64ct = { workspace = true }
clap = { workspace = true }
reqwest = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["io-std"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
bytes = { workspace = true }
url = { workspace = true }
rustls = { workspace = true }
tower-http = { workspace = true }
urlencoding = "2.1"
uuid = "1.17.0"
humantime = "2.1.0"
byte-unit = "5.1.6"

[dev-dependencies]
assert_cmd = "2.0.17"
rand = "0.8"
predicates = "3.1.3"
serial_test = "3.2.0"
