[package]
name = "tsp-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"

[dependencies.tsp_sdk]
path = "../tsp_sdk"
features = ["fuzzing"]

[[bin]]
name = "payload_encode_decode"
path = "fuzz_targets/payload_encode_decode.rs"
test = false
doc = false
bench = false

[[bin]]
name = "payload_decode_garbage"
path = "fuzz_targets/payload_decode_garbage.rs"
test = false
doc = false
bench = false
