[package]
name = "tsp-python"
version = "0.1.0"
edition = "2021"
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "tsp_python"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.21.2", features = ["experimental-async"] }
tsp.workspace = true
tokio.workspace = true
