[package]
name = "tsp"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
description.workspace = true
publish.workspace = true
rust-version.workspace = true

[features]
cesr-t = [ ]
default = ["async"]
strict = [ ]
fuzzing = ["dep:arbitrary"]
demo = [ ]
async = [
    "resolve",
    "aries-askar",
    "dep:async-stream",
    "dep:futures",
    "dep:tokio",
    "dep:tokio-tungstenite",
    "dep:tokio-util",
    "dep:tracing",
    "dep:rustls",
    "dep:tokio-rustls",
    "dep:rustls-pki-types",
    "dep:rustls-native-certs",
    "dep:rustls-pemfile"
]
resolve = [
    "serialize",
    "dep:reqwest"
]
serialize = [
    "dep:serde",
    "dep:serde_json",
    "dep:bs58"
]

[dependencies]
# generic
base64ct = { workspace = true }
thiserror = { workspace = true }
url = { workspace = true }
zeroize = { workspace = true }
tracing = { workspace = true, optional = true }
lazy_static = { workspace = true }
# crypto
ed25519-dalek = { workspace = true }
hpke = { workspace = true }
rand = { workspace = true }
sha2 = { workspace = true }
# async
aries-askar = { workspace = true, optional = true }
async-stream = { workspace = true, optional = true }
futures = { workspace = true, optional = true }
tokio = { workspace = true, optional = true }
# transports
tokio-tungstenite = { workspace = true, optional = true }
tokio-util = { workspace = true, optional = true }
rustls = { workspace = true, optional = true }
tokio-rustls = { workspace = true, optional = true }
rustls-pki-types = { workspace = true, optional = true }
rustls-native-certs = { workspace = true, optional = true }
rustls-pemfile = { workspace = true, optional = true }
# resolve
reqwest = { workspace = true, optional = true }
# serialize
serde = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }
bs58 ={ workspace = true, optional = true }
# fuzzing
arbitrary ={ workspace = true, optional = true }

[dev-dependencies]
serial_test = { version = "3.0" }
arbitrary ={ workspace = true }
tracing-subscriber = { workspace = true }
