[package]
name = "tsp"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
description.workspace = true
publish.workspace = true
rust-version.workspace = true

[features]
cesr-t = []
default = ["async"]
essr = []
strict = []
fuzzing = ["dep:arbitrary"]
demo = []
nacl = ["essr"]
pq = ["dep:hpke_pq", "essr"]
async = [
    "resolve",
    "aries-askar",
    "dep:async-stream",
    "dep:futures",
    "dep:tokio",
    "dep:tokio-tungstenite",
    "dep:tokio-util",
    "dep:tracing",
    "dep:rustls",
    "dep:tokio-rustls",
    "dep:rustls-pki-types",
    "dep:rustls-native-certs",
    "dep:rustls-pemfile",
    "dep:quinn",
]
resolve = ["serialize", "dep:reqwest"]
serialize = ["dep:serde", "dep:serde_with"]

[dependencies]
# generic
base64ct = { workspace = true }
thiserror = { workspace = true }
url = { workspace = true }
zeroize = { workspace = true }
tracing = { workspace = true, optional = true }
once_cell = { workspace = true }
# crypto
ed25519-dalek = { workspace = true }
hpke = { workspace = true }
hpke_pq = { workspace = true, optional = true }
rand = { workspace = true }
rand_core = { workspace = true }
sha2 = { workspace = true }
blake2 = { workspace = true }
typenum = { workspace = true }
crypto_box = { workspace = true }
# async
aries-askar = { workspace = true, optional = true }
async-stream = { workspace = true, optional = true }
futures = { workspace = true, optional = true }
tokio = { workspace = true, optional = true }
# transports
tokio-tungstenite = { workspace = true, optional = true }
tokio-util = { workspace = true, optional = true }
bytes = {workspace = true}
rustls = { workspace = true, optional = true }
tokio-rustls = { workspace = true, optional = true }
rustls-pki-types = { workspace = true, optional = true }
rustls-native-certs = { workspace = true, optional = true }
rustls-pemfile = { workspace = true, optional = true }
quinn = { workspace = true, optional = true }
# resolve
reqwest = { workspace = true, optional = true }
# serialize
serde = { workspace = true, optional = true }
serde_json = { workspace = true, optional = false }
serde_with = { workspace = true, optional = true }
bs58 = { workspace = true, optional = false }
# fuzzing
arbitrary = { workspace = true, optional = true }

# not used directly, but we need to configure
# the JS feature in this transitive dependency
# required for compiling to wasm32-unknown-unknown
[dependencies.getrandom]
version = "*"
features = ["js"]

[dev-dependencies]
serial_test = { version = "3.0" }
arbitrary = { workspace = true }
wasm-bindgen-test = "0.3.0"
