[package]
name = "tsp_python"
version = "0.1.0"
edition = "2021"
license.workspace = true

publish = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.24.0" }
serde_json.workspace = true
tsp_sdk.workspace = true
