[package]
name = "tsp_python"
version.workspace = true
edition.workspace = true
license.workspace = true

publish = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[features]
default = ["create-webvh"]
create-webvh = ["tsp_sdk/create-webvh"]

[dependencies]
pyo3.workspace = true
serde_json.workspace = true
tokio.workspace = true
tsp_sdk.workspace = true
futures.workspace = true
serde-pyobject.workspace = true
