[package]
name = "tsp_python"
version.workspace = true
edition.workspace = true
license.workspace = true

publish = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[features]
pq = ["tsp_sdk/pq"]

[dependencies]
pyo3.workspace = true
serde_json.workspace = true
tokio.workspace = true
tsp_sdk.workspace = true
futures.workspace = true
pythonize.workspace = true
rustls.workspace = true
bytes = "1.10.1"
