[package]
name = "tsp_sdk"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
description.workspace = true
rust-version.workspace = true

publish = true

[features]
cesr-t = []
default = ["async", "nacl"]
essr = []
strict = []
fuzzing = ["dep:arbitrary"]
demo = []
nacl = ["essr"]
pq = ["dep:hpke_pq", "dep:ml-dsa", "essr"]
bench-callgrind = ["dep:gungraun"]
bench-criterion = ["dep:criterion"]
async = [
  "resolve",
  "aries-askar",
  "dep:async-stream",
  "dep:futures",
  "dep:tokio",
  "dep:tokio-tungstenite",
  "dep:tokio-util",
  "dep:tracing",
  "dep:rustls",
  "dep:tokio-rustls",
  "dep:rustls-pki-types",
  "dep:rustls-native-certs",
  "dep:quinn",
]
resolve = ["serialize", "dep:reqwest", "dep:didwebvh-rs"]
serialize = ["dep:serde", "dep:serde_with"]
use_local_certificate = []
postgres = ["async", "aries-askar/postgres"]

[dependencies]
# generic
base64ct = { workspace = true }
thiserror = { workspace = true }
url = { workspace = true }
zeroize = { workspace = true }
tracing = { workspace = true, optional = true }
once_cell = { workspace = true }
# crypto
ed25519-dalek = { workspace = true }
hpke = { workspace = true }
hpke_pq = { workspace = true, optional = true }
ml-dsa = { version = "0.0.4", features = ["rand_core"], optional = true }
rand = { workspace = true }
rand_core = { workspace = true }
sha2 = { workspace = true }
blake2 = { workspace = true }
typenum = { workspace = true }
crypto_box = { workspace = true }
# async
aries-askar = { workspace = true, optional = true }
async-stream = { workspace = true, optional = true }
futures = { workspace = true, optional = true }
tokio = { workspace = true, optional = true }
# transports
tokio-tungstenite = { workspace = true, optional = true }
tokio-util = { workspace = true, optional = true }
bytes = { workspace = true }
rustls = { workspace = true, optional = true }
tokio-rustls = { workspace = true, optional = true }
rustls-pki-types = { workspace = true, optional = true }
rustls-native-certs = { workspace = true, optional = true }
quinn = { workspace = true, optional = true }
# resolve
reqwest = { workspace = true, optional = true }
# serialize
serde = { workspace = true, optional = true }
serde_json = { workspace = true, optional = false }
serde_with = { workspace = true, optional = true }
bs58 = { workspace = true, optional = false }
# fuzzing
arbitrary = { workspace = true, optional = true }
async-trait = "0.1.88"

# webvh
didwebvh-rs = { workspace = true, optional = true }

# bench
gungraun = { version = "0.17.0", optional = true }
criterion = { version = "0.5.1", optional = true }

# not used directly, but we need to configure
# the JS feature in this transitive dependency
# required for compiling to wasm32-unknown-unknown
[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.3.3", features = ["wasm_js"] }
[dependencies.getrandom]
version = "0.2"
features = ["js"]

[dev-dependencies]
serial_test = { version = "3.0" }
arbitrary = { workspace = true }
wasm-bindgen-test = "0.3.0"
rand_chacha = "0.3.1"

# bench
chrono = { version = "0.4", default-features = false, features = ["std"] }

[[bench]]
name = "guardrail"
harness = false
required-features = ["resolve", "bench-callgrind"]

[[bench]]
name = "guardrail_hpke"
harness = false
required-features = ["resolve", "bench-callgrind"]

[[bench]]
name = "guardrail_pq"
harness = false
required-features = ["pq", "resolve", "bench-callgrind"]

[[bench]]
name = "throughput"
harness = false
required-features = ["resolve", "bench-criterion"]

[[bench]]
name = "throughput_hpke"
harness = false
required-features = ["resolve", "bench-criterion"]

[[bench]]
name = "throughput_pq"
harness = false
required-features = ["pq", "resolve", "bench-criterion"]

[[bench]]
name = "throughput_report"
harness = false

[[bench]]
name = "throughput_transport"
harness = false
required-features = ["async", "bench-criterion"]

[[bench]]
name = "throughput_cli"
harness = false
required-features = ["async", "bench-criterion"]

[[bench]]
name = "throughput_store_backend"
harness = false
required-features = ["async", "bench-criterion"]

[[bench]]
name = "throughput_store_backend_pg"
harness = false
required-features = ["postgres", "bench-criterion"]
